--- a/test.tex
+++ b/test.tex
@@ -750,20 +750,17 @@ The above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
 \begin{equation}
 e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}
 \end{equation}
-implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Brout-Englert-Higgs boson in the Topological Axis (Fig.1). The above Bizouard constant confirms its computation role, and the above relation implies, to 61 ppm:
-\begin{equation}
-lnf\approx \pi e/4d_e
-\end{equation}
+implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Brout-Englert-Higgs boson in the Topological Axis (Fig.1). The above Bizouard constant confirms its computation role, and the above relation implies, to 61 ppm: $ lnf\approx \pi e/4d_e$.
 The following combination of three main dimensionless parameters is remarkable, to 0.05 \% and 0.13 \%:
 \begin{equation}
 F/af \approx 496\approx j^{\delta}
 \end{equation}
-Also, to 8 ppm: $$\ln(O_{M}) /2\ln\ln\ln\ln(O_{M}) \approx 137$$ and the product of the 20 groups of the happy family tied
+Also, to 8 ppm: $\ln(O_{M}) /2\ln\ln\ln\ln(O_{M}) \approx 137$ and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
 \begin{equation}
-\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}
+\Pi_{happy} \approx \delta \cdot a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}
 \end{equation}
-This confirms the above Complete Holic Principle, and the computation role of $\Gamma$ is moreover confirmed by, to 2\%: $$a^a \approx \Gamma^{209}$$ and the order of the Baby-Monster $$O_B\approx\Gamma^{24}$$ Now, from $209 = 137 + 3\times 24$:
+This confirms the above Complete Holic Principle, and the computation role of $\Gamma$ is moreover confirmed by, to 2\%: $a^a \approx \Gamma^{209}$ and the order of the Baby-Monster $O_B\approx\Gamma^{24}$. From $209 = 137 + 3\times 24$:
 \begin{equation}
 O_B \approx (a/\Gamma)^{a/3}
 \end{equation}
