--- a/test.tex
+++ b/test.tex
@@ -745,7 +745,7 @@ With the tachyonic ratio $U = R_{GC}/R = C/c$, the cardinal orders of the two gi
 \begin{equation}
 \pi U/a \approx O_M D n/H \approx O_B P a^{3/2}
 \end{equation}
-where $D = 196883$ is the Moonshine dimension of the Monster group. The corrected Eddington's number $N_{Ed}^{prime} = a \cdot 2^{256} , replacing 136 by $a$ shows: (4.5 ppm and 0.03  \%):
+where $D = 196883$ is the Moonshine dimension of the Monster group. The corrected Eddington's number $N_{Ed}^{prime} = a \cdot 2^{256}$, replacing 136 by $a$ shows(4.5 ppm and 0.03 \%):
 \begin{equation}
 N_{Ed}^{prime} \approx 6 \cdot 137 \cdot P O_M \approx (3/4) a p a_w (U/O_M)^9
 \end{equation}
