--- a/test.tex
+++ b/test.tex
@@ -1176,8 +1176,7 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It i
 \end{itemize}
 
 \section*{Acknowledgements}
-The authors salute the memory of Sir Michael Atiyah. His comments were precious. His constant has considerably helped our task of proving the existence of a fundamental theory. We also thank helpful discussions with the 
-mathematician Anatole Khelif and private communication by Joel Sternheimer about his scale factor, 
+The authors salute the memory of Sir Michael Atiyah. His comments were precious, and his constant is decisive. We also thank helpful discussions with Thiebault Moulin, Cristian Marchal, Anatole Khelif and Joel Sternheimer whom scale constant we called $j$ in his honor. 
 we called $j$ in his honor.
 %
 \begin{flushright}\footnotesize
