--- a/test.tex
+++ b/test.tex
@@ -785,24 +785,29 @@ O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx \sqrt{2}(
 confirming the central role of 496. Note also (0.1 \%) that $O_MO_B \approx  n_{ph}/\delta^{1/2}$, where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. 
 
 From Eqs. (48), (52) and (54), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$
-Now $ae^e/\Gamma$ is close to $2ed_e$. More precisely (0.7 ppm):
-\begin{equation}
-a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2 
-\end{equation}
-Thus, \textit{the Atiyah symmetry infers a relation between the three mathematical constants $e$, $\pi$ and $\gamma$ and the electron magnetic moment $2d_e$}. It is remarkable that this is obtained from singularities involving the two Monster groups. This introduces the next section.
+
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The fine-tuning with basic mathematical constants}
 \markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 We look here for relations involving basic mathematical constants, noting firstly that, to 6.5 ppm:
+$p \approx \Gamma (\pi e)^2$. There is a quasi-holographic relation connecting the constantes $e$, $\pi$ and $\gamma$ and the volume $v_2 = (4\pi/3) (ln2)^3$ (0 ppb and 0.046 \%):
 \begin{equation}
-p \approx \Gamma (\pi e)^2 
+e^{1/3} = (4\pi/3)\gamma^2 \approx v_2 
 \end{equation}
-confirming the central role of Atiyah's constant (section 8.2).
- 
+$v_2$ is tied to $a$ through (354 ppb):
+\begin{equation}
+v_2^{16} \approx 3a^2/2\cdot 137 
+\end{equation}
+This has been found from the Muon ratio $mu \approx 3a/2 \approx e^{16/3}$, section 9.5.
+
 \subsection {The optimal calculation base $e$ confirmed}
 
+The electron magnetic momant $2d_e$ appears in (0.7 ppm):
+\begin{equation}
+a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2 
+\end{equation}
 The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
 \begin{equation}
 f(k = e^{2}) = exp(2^{e^{2+1/2}}) \approx exp(e^{2e}+e^{2})
@@ -1000,7 +1005,7 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 
 With $\delta_K = p_K^2/a^3 $, and the symmetrised Planck area $(l_P^{\prime})^2 = \sqrt{h \hbar} G/c^3$ (11, -11 ppm, and 0.04 \%):
 \begin{equation}
-\pi^{-1/2}(R_{GC}/l_P^{\prime})^4 \approx (\delta_K O_M )^9 e^{1/2a} \approx (4\pi)^{1/2}  \mu^{210} \approx \tau^{137}
+\pi^{-1/2}(R_{GC}/l_P^{\prime})^4 \approx (\delta_K O_M )^9 e^{1/2a} \approx (4\pi)^{1/2}  \mu^{210}/4\pi \approx \tau^{137}
 \end{equation}
 The existence of a Final Theory based on the Holic Principle (section 6), the Grandcosmos and the Koide-Sanchez constant cannot be denied. The interpretation is clear: \textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}. 
 
