--- a/test.tex
+++ b/test.tex
@@ -784,7 +784,7 @@ O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx \sqrt{2}(
 \end{equation}
 confirming the central role of 496. Note also (0.1 \%) that $O_MO_B \approx  n_{ph}/\delta^{1/2}$, where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. 
 
-From Eqs. (48), (52) and (54), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$
+From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$, and more precisely (èè ppm) with the Higgs ratio defined in section 9.4:  $\rsqt{s}/j \approx (ae^e/\Gamma)^{1/3}$.
 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
@@ -792,13 +792,13 @@ From Eqs. (48), (52) and (54), by taking the $137^{th}$ root, one obtains, to 0.
 \markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 We look here for relations involving basic mathematical constants, noting firstly that, to 6.5 ppm:
-$p \approx \Gamma (\pi e)^2$. There is a quasi-holographic relation connecting the constantes $e$, $\pi$ and $\gamma$ and the volume $v_2 = (4\pi/3) (ln2)^3$ (0 ppb and 0.046 \%):
+$p \approx \Gamma (\pi e)^2$. There is a quasi-holographic relation connecting the constants $e$, $\pi$ and $\gamma$ and the volume $v_2 = (4\pi/3) (ln2)^3$ (0 ppb and 0.046 \%):
 \begin{equation}
 e^{1/3} = (4\pi/3)\gamma^2 \approx v_2 
 \end{equation}
 $v_2$ is tied to $a$ through (354 ppb):
 \begin{equation}
-v_2^{16} \approx 3a^2/2\cdot 137 
+v_2^{16} \approx 3a^2/2\times 137 
 \end{equation}
 This has been found from the Muon ratio $mu \approx 3a/2 \approx e^{16/3}$, section 9.5.
 
