--- a/test.tex
+++ b/test.tex
@@ -784,7 +784,7 @@ O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx \sqrt{2}(
 \end{equation}
 confirming the central role of 496. Note also (0.1 \%) that $O_MO_B \approx  n_{ph}/\delta^{1/2}$, where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. 
 
-From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$, and more precisely (èè ppm) with the Higgs ratio defined in section 9.4:  $\rsqt{s}/j \approx (ae^e/\Gamma)^{1/3}$.
+%From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx %(ae^e/\Gamma)^{1/3}$, and more precisely (èè ppm) with the Higgs ratio defined in section 9.4:  $\rsqt{s}/j %\approx (ae^e/\Gamma)^{1/3}$.
 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
