--- a/test.tex
+++ b/test.tex
@@ -1016,24 +1016,21 @@ The existence of a Final Theory based on the Holic Principle (section 6), the Gr
 There is presently an intense debate in physics community. Only a minority believes in a 
 Final Theory, while a large majority have abandoned such hope and believes seriously in the extreme
 consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
-debate in favor of a single steady-state cosmos.
+debate in favor of a \textit{single steady-state} cosmos.
 
 This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So,
 while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
-`Inverse Anthropic Principle` \cite{Sanchez1} is more logical, stating that an all-deterministic single Cosmos
+`Inverse Anthropic Principle` is more logical, stating that an all-deterministic single Cosmos
 implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
 called `theory` with too much missing links \cite{Chauvin}. The fundamental hypothesis of
 this article is that the Cosmos is a computer. A common point with the brain is the multi-base
 character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi
-question ` where are they ? ` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
+question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
 dogmatic community.
 
 Another type of separation exists, however with not any debate: only a small minority thinks Physics
 and Mathematics are unified, while a large majority separates the two domains (so separating also
-Biology). The present article shows that the former are right: physical constants are mathematical
-constants, so the present-day mathematics are still in infancy, not realizing that the discovery of
-sporadic groups is a crucial discovery for physics, probably tied to octonion algebra. In particular, it is clearly shown that
-Grandcosmos uses optimal physics-mathematics dimensionless constants as
+Biology). This is illogical, because if it is admitted that physics is based on mathematics, one must admit that the dimensionless parameters are mathematical constants. The present article settle the question by showing, \textit{for the first time, a series of ppb relations}. Hence, it is not the Univrrse which is underdetermined, but rather that the present-day mathematics are still in infancy, not realizing for instance that the discovery of sporadic groups is a crucial discovery for physics, probably tied to octonion algebra. In particular, it is clearly shown that Grandcosmos uses optimal physics-mathematics dimensionless constants as
 calculation bases and that they are present in DNA characteristics \cite{Sanchez1}. The present article shows
 definitely the liaisons with $e$, $\pi$ and $\gamma$, as well as very special rational approximations of 
 them, and rehabilitates string theories, also abandoned by a majority \cite{Woit}.
@@ -1056,7 +1053,7 @@ with a scientific theory. Secondly, in quantum physics, the so-called `uncertain
 only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier
 transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
 
-The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling that this term \textit{immergence} is a neologism.
+The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling, that this term \textit{immergence} is a neologism.
 
 Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalization of $e$ and $\pi$. This have been shown in this article.
 
@@ -1065,7 +1062,7 @@ Finally, there is the problem of infinity. While it is welcome in mathematics, i
 \markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ \textit{Back to Cosmos}}
 
 The application of the old direct scientific method, looking for fine tuning between physical
-parameters leads to a return to the Perfect Cosmological Principle implying a Steady-state Cosmos,
+parameters leads to a return to the Perfect Cosmological Principle implying a steady-state Cosmos,
 confirmed by holographic relations. The standard cosmological principle was unduly limited to
 spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do
 not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave
@@ -1075,12 +1072,12 @@ absolute clock, the dephasage of coherent oscillations between quasars being rul
 The simplest topological equations, the equality between dimensionless topological varieties,
 circumference, area, volume... appear to apply in cosmology, which, for many, seems to be the hardiest
 chapter of physics. This modern, negative, opinion is in fact in contrast with the ancient culture, for
-which textit{the Cosmology is the first of all science, so must be the simplest}. In the original sens of the
+which \textit{the Cosmology is the first of all science, so must be the simplest}. In the original meaning of the
 word `revolution`, it is a return to the source of Science, the `all is whole number` of Pythagoras.
 Even the degenerate form of topological or holographic relations, the simplest diophantine
 equations, the Holic Principle, shows direct pertinence. In particular, it emphasizes the 30
 dimensions, which appear decisive in the Topological Axis, and are identified with the sum of 26 string
-dimensions and 4 of space-time.
+dimensions and 4 of usual space-time.
 
 The standard Holographic Principle must be generalized to wavelengths others than the Planck
 length, in particular the topon, the visible Universe wavelength, in 1D holography, which breaks
@@ -1091,27 +1088,26 @@ The high precision of relations prove that the traditional scientific thinking i
 the physical parameter values, meaning they are mere mathematical constants. In this respect, the
 high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, with far lesser precision, the background temperature, must be saluted as decisive achievements.
 
-In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote \cite{Atiyah1}: -extit{`Nobody has
+In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote \cite{Atiyah1}: \textit{`Nobody has
 ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
 should be worried what the Universe would be if $a$ were not 137.035999...}` This is a definite
 rejection of the Multiverse Hypothesis.
 
 The present article confirms also the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-
-physics, taking the electron wavelength as unity. \textit {the double logarithm representation was the simplest representation}
+physics, taking the electron wavelength as unity. \textit {the double logarithm representation was the simplest one, and it appeared later this was the reunion of a serie of height 1Q-2D holographic relations, respecting the algebric Bott period}.
 
 The pertinence of the Topological Axis confirms
 the importance of the electron wavy propagation. This rehabilitates the string theory, including the
 \textit{tachyonic} bosonic version, since the canonical dimension 26 appears to characterize the observable
-universe radius $R$. This confirms that $c$ is not really a cosmic pertinent speed, as is clearly shown both by
+universe radius $R$, and also the gravitaton mass. Hence $c$ cannot be a maximal speed: it is shown both by
 logic (it is far too slow) and by the quantum non-locality.
 
-Moreover, excluding $c$ from the simplest tool of elementary physics, the prospective dimensional
+Indeed, excluding $c$ from the simplest tool of elementary physics, the prospective dimensional
 analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature and the cosmic super-cycle periodicity, which connects with the holic dimension n = 30 in the
 Topological Axis, whose apparent asymmetry suggests directly the existence of a Grandcosmos.
 
 While it is claimed that String Theory do not connect with experiment, the Bott periodicity
-appears, unifying in particular the gauge bosons, so confirming the Standard Model of Particle Physics, but with
-massive gluon, which is independently seriously considered \cite{Salingaros}.
+appears, not only in the general organisation of the Topological Axis, but also by unifying in particular the gauge bosons, so confirming the Standard Model of Particle Physics. However gluons must be massive which is independently seriously considered \cite{Larin}.
 
 This means also that the International System must go back to only three fundamental unities,
 Mass, Length and Time. The distinction between Length and Time must be emphasized, as
@@ -1135,7 +1131,7 @@ The profound significance of a number of dimensions is the number of independent
 which is a fundamental invariant, whatever the theory \cite{Weigel}. So, it is logical to advance a
 hypothesis that 26 physical parameters are defined by the 26 sporadic cardinal orders. Since
 Sporadic Groups are associated with octonion algebra \cite{Atiyah2}, this rejoins a prediction of Atiyah's last
-work, the essential role of octonion algebra in the final theory \cite{Koide}.
+work, the essential role of octonion algebra in the final theory \cite{Atiyah1}.
 
 The problem of the stability of the solar system must be revisited, taking into account
 seriously a cosmic influence, characterized by the Kotov's period and length. Also the Pioneer, Tifft
