--- a/test.tex
+++ b/test.tex
@@ -733,11 +733,11 @@ Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
 a^{a} \approx u_1^{3\times(2^{8}-1)}
 \end{equation}
 which defines $a$ to 0.3 ppm. So the number $a$ establishes a connection between $u_{1}$ and $u_{3}$, two of the
-simplest arithmetic's generators. This opens a \textit{new research in pure mathematics}.
+simplest arithmetic's generators. This opens a \textit{new research in pure mathematics}. Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \approx 140^2 + 1 \approx a(a+6)$ to 4 ppm. 
 
-Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \approx 140^2 + 1 \approx a(a+6)$ to 4 ppm. So, this comes back to the antique problem of the rationalisation of $\sqrt{2}$. Its corresponding value shows a $8^{th}$ fractional term very close to $\sqrt{5}$, so leading to $\sqrt{2}_a \approx N_{a}/D_{a}$, with $ N_{a} = 239 \sqrt{5} + 99 \approx \Gamma^{2}
-\approx O_B^{1/12} $ and $ D_{a} = 13^2 \sqrt{5} + 70 \approx O_M^{3/61}$,
-so connecting $O_M$ and $O_B$, since $61/2 \approx F/a^{2}$ to 0.04 \%, and introducing the next section.
+%So, this comes back to the antique problem of the rationalisation of $\sqrt{2}$. Its corresponding value shows a $%8^{th}$ fractional term very close to $\sqrt{5}$, so leading to $\sqrt{2}_a \approx N_{a}/D_{a}$, with $ N_{a} %= %239 \sqrt{5} + 99 \approx \Gamma^{2}
+%\approx O_B^{1/12} $ and $ D_{a} = 13^2 \sqrt{5} + 70 \approx O_M^{3/61}$,
+%so connecting $O_M$ and $O_B$, since $61/2 \approx F/a^{2}$ to 0.04 \%, and introducing the next section.
 
 \subsection{The intervention of Sporadic Groups}
 
@@ -784,7 +784,7 @@ O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx \sqrt{2}(
 \end{equation}
 confirming the central role of 496. Note also (0.1 \%) that $O_MO_B \approx  n_{ph}/\delta^{1/2}$, where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. 
 
-%From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx %(ae^e/\Gamma)^{1/3}$, and more precisely (èè ppm) with the Higgs ratio defined in section 9.4:  $\rsqt{s}/j %\approx (ae^e/\Gamma)^{1/3}$.
+From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$, and more precisely (22 ppm) with the Higgs ratio $s$ defined in section 9.4: $\sqrt{s}/j \approx (ae^e/\Gamma)^{1/3}$.
 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
@@ -800,7 +800,7 @@ $v_2$ is tied to $a$ through (354 ppb):
 \begin{equation}
 v_2^{16} \approx 3a^2/2\times 137 
 \end{equation}
-This has been found from the Muon ratio $mu \approx 3a/2 \approx e^{16/3}$, section 9.5.
+This was found from $\mu \approx 3a/2 \approx e^{16/3}$, section 9.5.
 
 \subsection {The optimal calculation base $e$ confirmed}
 
@@ -828,7 +828,7 @@ e^{e^e}/a_1^2 \approx 4 ln P \approx a ln(9/2) \approx 5^{2^7} \approx (WZ)^{\be
 \end{equation}
 showing the role of musical bases 2, 3 and 5. Note that $e^2$ is the limit of the following musical series:
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
-a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale.
+a series converging much rapidly than the classical $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale.
 
 The canonical ratio $R_{GC}/\lambdabar_M = 2P^9/a^6pH $ confirms the Full Holographic Principle, to 0.04 \%:
 \begin{equation}
@@ -838,17 +838,21 @@ exhibiting (0.3 ppm): $ (a/137)^{420} \approx (137 - 3)/120 $
 with $137 - 3 = 7 + 127$ showing the Combinatorial Hierarchy terms\cite{Sanchez1}. 
 
 \subsection {The Lenz-Wyler's Formula}
-Armand Wyler published a value approaching $a$ to 0.6 ppm and confirmed the pertinence
-of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching $p$ to 18.824 ppm.
+Wyler published a value approaching $a$ to 0.6 ppm and confirmed the pertinence of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5} \approx p$ to 18.824 ppm.
 
 The symmetry between $a$ and 137 is confirmed by the 83 ppb relation $a/137 \approx (p_0 H)^{1/2} /p$ involving $H$, the Hydrogen electron mass ratio. Also, there is the ppb relation: $p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $ where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. With $u = a/137$ another ppb relation is:
-$$ X \approx (upn^2)^2 \approx (d_e \beta H^2/u)^3$$ close to the cubic root of the Systema number \cite{Moulin} $N_{sys} = 2^{65}\cdot 3^{41} \cdot 5^{28}$. The deviation reveals the Wyler's form $p_W = 6 (a^2 - 137 ^2)^{5/2}$ (16 ppm):
-$$ X^3 \approx N_{sys} p_W /a^{3/2}$$
-The Lenz-Wyler formula is the product of the area by the volume of a 3D cube with side $\pi$. If one considers a 3D cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, whose power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $ shows the neutron/electron mass ratio $n$. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $  
+$$ X \approx (upn^2)^2 \approx (d_e \beta H^2/u)^3$$ close to the cubic root of the Systema number \cite{Moulin} $N_{sys} = 2^{65}\cdot 3^{41} \cdot 5^{28}$. The deviation reveals the Wyler's form $p_{aW} = 6 (a^2 - 137 ^2)^{5/2}$ (16 ppm):
+$$ X^3 \approx N_{sys} p_{aW} /a^{3/2}$$
+This term appears also in the following proposition for the weak mixing effective angle 0.23149(13), where $\Phi$ is the golden number (3.6, 30 and 8.5 ppm):
+\begin{equation}
+(1/ln\Phi)^2 \approx g_0/p_{aW} /approx 2 sqrt{s}/e^{2e} /approx 16 \times 496 H/pn  
+\end{equation}
+
+The Lenz-Wyler formula is the product of the area by the volume of a 3D cube with side $\pi$. If one considers a 3D cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, whose power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $ shows the neutron/electron mass ratio $n$. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $.  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q\times 5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
-Since $R/\lambdabar_e \approx 2^{128}$, the decomposition of 6 leads to a natural Universe-Grandcosmos partition, and to the following approximation for the tachyonic celerity ratio (0.01\%) 
-$$ U = C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide-Sanchez constant (see section 9.5). This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It is an example of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out. Another example signals a general misconception: the coherence of the stimulated emission in a laser is a global effect in a homogeneous media (atomic coherence). This elimination of $q$ leads to (2.6 \%):
+Since $R/\lambdabar_e \approx 2^{128}, $the \textit{the decomposition of 6 leads to a natural Universe-Grandcosmos partition}, and to the following approximation for the tachyonic celerity ratio (0.01\%) 
+$$ U = C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide-Sanchez constant (see section 9.5). This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It is an example of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out. Another example signals a general misconception: the coherence of the stimulated emission in a laser is a \textit{global effect] in a homogeneous media (atomic coherence). This elimination of $q$ leads to (2.6 \%):
 $(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$. 
 
 \subsection {The Archimedes constant $\pi$ as a calculation base}
@@ -857,18 +861,17 @@ $(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$.
 The value of the Topological Function for the main String
  dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f(26) \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1ppm:
 \begin{equation} 
-(p/n) (R/\lambdabar_{e})^{2} \approx (f(26)/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi_R^{155}
+(p/n) (R/\lambdabar_{e})^{2} \approx (f(26)/6)^{2} \approx (2\pi^{2} a^{3})^{10} \approx \pi^{155}
 \end{equation}
 The corresponding approximation $\pi_R$ of $\pi$ shows the fractional series 3, 7, 16, -u, with $u \approx
-2 \times 137$, confirming again the Rationalization Hypothesis. This leads to the rational value
+2 \times 137$, confirming again the Rationalization Hypothesis of section 3. This leads to the rational value
 $\pi_{R} = (355u-22)/(113u-7)$. This corresponds to the above $G$ value to 10 ppb accuracy.
-Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation involving again 137:
-$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$. The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}. Whole powers of $\pi$ appears in the even order Riemann series, and in:
-$a \approx 4\pi^{3} + \pi^{2} + \pi $ (Reilly formula 2 ppm), while $a \approx \pi^{9/2}2^{-1/3}$ (8 ppm). Moreover, with $P = \lambdabar_e/ l_P$ (0.3 and 0.07 \%):
+Since $(R/\lambdabar_{e})^{2} \approx 2^{256} $, this illustrates the following musical relation involving again 137: $2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$. The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}. Whole powers of $\pi$ appears in the even order Riemann series, and in:
+$a \approx 4\pi^{3} + \pi^{2} + \pi $ (Reilly formula, 2 ppm), while $a \approx \pi^{9/2}2^{-1/3}$ (8 ppm). Moreover, with $P = \lambdabar_e/ l_P$ (0.3 and 0.07 \%):
 \begin{equation}
 P^3 \approx \pi^{a-2} \approx (2\pi R/\lambdabar_e)(2 \pi l_K/r_e) 
 \end{equation}
-proving definitely the role of the Planck volume and the Kotov length.
+confirming the role of the Planck volume and the Kotov length.
 
 \subsection {The Four Forces Connection in ppb Fine-Tuning}
 %The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with %propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have %been possible with gravitational force. The Topologocal Axis shows clearly that GUT with $1O^{16}$ GeV gauge %boson seems confirmed. Moreoverer, 
@@ -876,14 +879,14 @@ In section 4.2, it is proven that the CCO oscillation reveals a symmetry between
 \begin{equation}
 (H/p)^7 = (H/p_G d_e)^2 \approx (p_{moy}/p_K)^3 \approx (p/p_{00})^{210}
 \end{equation}
-where $p_K$ is the Koyde-Sanchez constant (section 9.5), $p_{moy}^3 = n p_a p_E$, whith the neutron/electron mass ratio $n \approx 1838.68366089(17)$, $p_a = (4\pi )^2 \sqrt{a}$ and $p_E = 1847.599459$, the Eddington's value.  
-The holic resolving term is the Lenz-Wyler form $p_{00} = 6\pi_0^5$, where $\pi_0$ has the fractional development: 3;7;16;($\sqrt{s}+1$).
+where $p_K$ is the Koyde-Sanchez constant (section 9.5), and $p_{moy}^3 = n p_a p_E$, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$, $p_a = (4\pi )^2 \sqrt{a}$ and $p_E = 1847.599459$, the Eddington's value.  
+The holic resolving term is the Lenz-Wyler form $p_{00} = 6\pi_0^5$, where $\pi_0$ has the fractional development: 3,7,16,($\sqrt{s}+1$).
  With the Atiyah constant $\Gamma = \gamma a/\pi$ (section 8.2), inside the 250 ppb indetermination:  
  $a_{w} = F^2 = (137 \times 2 \Gamma)^{3}$. Now $a_{w}$ is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$. Thus:    
 \begin{equation}
 \lambdabar_e/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
-leading to $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$. Moreover, with the following definition of the Bizouard strong force parameter $f$:
+leading to $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$. Moreover, with the definition of the Bizouard strong force parameter $f$:
 \begin{equation}
 aF/\sqrt(pH) = 2\pi afpH/F \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
 \end{equation}
@@ -891,13 +894,13 @@ where $\mu$ is the Muon/Electron mass ratio, \textit{inside its 20 ppb indetermi
 \begin{equation}
 \mu \approx 206.7682869
 \end{equation}
-Note that this value $f$ is close (0.06 \%) to the following conjonction (7 ppm):
+Note that this value $f$ is close (0.06 \%) to the following double conjonction (7 and 5 ppm):
 \begin{equation}
-(a-2)/16 \approx (a-135)^3
+(a-135)^3 \approx (a-2)/16 \approx \pi^4 ln2/8 
 \end{equation}
 
 
-Note that $4n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
+Note that $4n/\Gamma$ Iin Eq. (64) is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
 development of $\pi$ is to this date an unsolved problem, \textit{this confirms that current mathematics is
 incomplete and that Nature uses rational approximations of $\pi$}.
@@ -913,7 +916,7 @@ has 9 dimensions, and if the 6 supplementary dimensions unfold on very small dis
 
 The following weak boson ratios $W$ and $Z$ match (Eq.1):
 $R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$
-\textit{in the ppb range}. For the charged boson: 
+\textit{in the ppb range}. Firstly: 
 \begin{equation}
 W \approx 137^{2} \Gamma / 3d_{e}
 \end{equation}
@@ -921,7 +924,7 @@ This value is confirmed in the ppb range by:
 \begin{equation}
 \pi W^{14}/3 \beta \approx 496^7 O_M
 \end{equation}
-confirming the holic attribution (section 6) of power 7 for a field parameter, and the central role of the dimension 496.
+confirming the holic attribution (section 6) of power 7 for a field parameter, and the central role of the dimension 496. Now:
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
@@ -933,12 +936,11 @@ the Z value is also confirmed by its ppb liaison with the Janko pariah group ord
 \begin{equation}
 J_3 \approx 3\pi^2 Z^2 / (137^2 + \sqrt{1+d_e})
 \end{equation}
-From $ J_3 \approx W^2/496$, the Eq (68) induces a liaison between the monster and the $J_3$ orders, while these two groups have no known relations (0.2 ppm):
+From $ J_3 \approx W^2/496$, the Eq (69) induces a liaison between the monster and the $J_3$ orders, while these two groups have no known relations (0.2 ppm):
 \begin{equation}
 O_M \approx d_e J_3^7 \sqrt(p/p_0)
 \end{equation}
-\textit{The very existence of so precise ppb relations confirms there exists a Final Theory involving the sporadic groups}. The following section indicates additive hints.
-
+\textit{The very existence of so precise ppb relations confirms there exists a Final Theory involving the sporadic groups}.
 
 \subsection {The heavy leptons fine-tuning}
 The standard model is unable to explain why there are three famillies of particles. Thus, the study of the muon and tau mass ratios is crucial. Now, the following Koide relation \cite{Koide}, which has a mathematical justification in term of circulant matrix \cite{Brannen}, correctly predicted $\tau$ at an epoch (around 2000) during which its measurement was false to 3 $\sigma$. It writes:
