--- a/test.tex
+++ b/test.tex
@@ -1327,7 +1327,7 @@ CRAS. Paris 305, Ser. II, 349--352 (1987).
 \end{sloppypar}
 \end{document}
 
-}\par
+\par}
 \renewcommand{\baselinestretch}{1.0}
 \bigskip
 First Author's Your Full Name$^1\!$, \ Second Author's Full Name$^2\!$, \ and \ Third Author's Full Name$^3$\\ 
