--- a/test.tex
+++ b/test.tex
@@ -940,7 +940,7 @@ From $ J_3 \approx W^2/496$, the Eq (69) induces a liaison between the monster a
 \begin{equation}
 O_M \approx d_e J_3^7 \sqrt(p/p_0)
 \end{equation}
-\textit{The very existence of so precise ppb relations confirms there exists a Final Theory involving the sporadic groups}.
+\textit{The very existence of so precise ppb relations confirms there exists a Final Theory involving the sporadic groups}. The following section shows additive hints.
 
 \subsection {The heavy leptons fine-tuning}
 The standard model is unable to explain why there are three famillies of particles. Thus, the study of the muon and tau mass ratios is crucial. Now, the following Koide relation \cite{Koide}, which has a mathematical justification in term of circulant matrix \cite{Brannen}, correctly predicted $\tau$ at an epoch (around 2000) during which its measurement was false to 3 $\sigma$. It writes:
@@ -1327,7 +1327,7 @@ CRAS. Paris 305, Ser. II, 349--352 (1987).
 \end{sloppypar}
 \end{document}
 
-\par}
+}\par
 \renewcommand{\baselinestretch}{1.0}
 \bigskip
 First Author's Your Full Name$^1\!$, \ Second Author's Full Name$^2\!$, \ and \ Third Author's Full Name$^3$\\ 
