--- a/test.tex
+++ b/test.tex
@@ -747,8 +747,14 @@ With the tachyonic ratio $U = R_{GC}/R = C/c$, the cardinal orders of the two gi
 \end{equation}
 where $D = 196883$ is the Moonshine dimension of the Monster group. The corrected Eddington's number $N_{Ed}^{\prime} = a \cdot 2^{256}$, replacing 136 by $a$ shows (4.5 ppm and 0.03 \%):
 \begin{equation}
+\tau lna/\mu ln O_M \approx 2/3 \approx lnP/O_B
+\end{equation}
+
+With the heavy leptons parameters (section 9.5), to 24 ppm and 0.15\%:
+\begin{equation}
 N_{Ed}^{\prime} \approx 6 \cdot 137PO_M \approx (3/4) a p a_w (U/O_M)^9
 \end{equation}
+
 
 The above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
 \begin{equation}
