--- a/test.tex
+++ b/test.tex
@@ -164,13 +164,13 @@ In the same manner, \textit{this article prefigures the fundamental theory, but 
 \begin{figure*}
 \centering
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
-\caption{\textit{The Topological Axis}. The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series n = 4k + 2, from k = 0 to k = 7, characteristics of the Bott sequence [19]. This is the origin of the name `Topological Axis`. 
-\textit{In the macro-physics side, with length unit the Electron Compton reduced wavelength, the Universe circumference} is tied to the bosonic critical dimension 26, while Bott reduction $\Delta$n = 8 leads firstly to  n = 18: it is the \textit{thermal photon} (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor $j$ (section 8.2); another Bott reduction leads to n = 10 (super-string dimension): it is the \textit{Hydrogen atom}, and finally to n = 2: the \textit{string}. For the number 24 of transverse dimensions, it is the \textit{Kotov length} (section 4.3), multiplied by a factor 2$\pi a$, with $a \approx 137.036$. For n $\approx \Gamma$, the Atiyah constant (section 8.2), it is the \textit{galaxy group} radius, a characteristic cosmic length ($10^{6}$ ligth-years, section 2.1). For k $\approx e^{2}$, $y \approx 2e$, it is the \textit{Grandcosmos} radius (section 3). 
-The Space-Time-Matter Holic dimension n = 30 (section 6) is tied to $c$ times the cosmic \textit{Supercycle} period (section 5). 
-\textit{In the micro-physics side, with the same length unit, the Electron Compton reduced wavelength}, Bott reductions from n = 30 lead to the \textit{gauge bosons}: n = 22 for the GUT one, ($10^{16}$ GeV), n = 14 for the weak one and n = 6 for the (\textit{massive}) gluons, about 10 MeV.
+\caption{\textit{The Topological Axis}. The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series d = 4k + 2, from k = 0 to k = 7, characteristics of the Bott sequence [19]. This is the origin of the name `Topological Axis`. 
+\textit{In the macro-physics side, with length unit the Electron Compton reduced wavelength, the Universe circumference} is tied to the bosonic critical dimension 26, while Bott reduction $\Delta$d = 8 leads firstly to  d = 18: it is the \textit{thermal photon} (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor $j$ (section 8.2); another Bott reduction leads to d = 10 (super-string dimension): it is the \textit{Hydrogen atom}, and finally to d = 2: the \textit{string}. For the number 24 of transverse dimensions, it is the \textit{Kotov length} (section 4.3), multiplied by a factor 2$\pi a$, with $a \approx 137.036$. For d $\approx \Gamma$, the Atiyah constant (section 8.2), it is the \textit{galaxy group} radius, a characteristic cosmic length ($10^{6}$ ligth-years, section 2.1). For k $\approx e^{2}$, $y \approx 2e$, it is the \textit{Grandcosmos} radius (section 3). 
+The Space-Time-Matter Holic dimension d = 30 (section 6) is tied to $c$ times the cosmic \textit{Supercycle} period (section 5). 
+\textit{In the micro-physics side, with the same length unit, the Electron Compton reduced wavelength}, Bott reductions from d = 30 lead to the \textit{gauge bosons}: d = 22 for the GUT one, ($10^{16}$ GeV), d = 14 for the weak one and d = 6 for the (\textit{massive}) gluons, about 10 MeV.
 For the intermediary superstring value n = 10, there is the mean \textit{Pion}. For k $\approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal order, it is the \textit{Brout-Englert-Higgs boson} (125 GeV). For k $\approx 2e^e$, it is the \textit{topon}, the visible Universe wavelength, the space quantum, which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
-   \textit{With unit $2\pi$ times the Nambu mass}, n = 24 corresponds to the \textit{photon mass}, while n $\approx 26$, to the \textit{graviton mass} \cite{Sanchez1}.}
-    \textit{The central dimension is n = 16, for a total $2^7$ of string dimensions in the Bott sequence, the reunion of eight 1D-2D holographic relations, from which five were long reported. This suggests a liaison with the Eddington's matrix $16\times 16$}.
+   \textit{With unit $2\pi$ times the Nambu mass}, n = 24 corresponds to the \textit{photon mass}, while d $\approx 26$, to the \textit{graviton mass} \cite{Sanchez1}.}
+    \textit{The central dimension is d = 16, for a total $2^7$ of string dimensions in the Bott sequence, the reunion of eight 1D-2D holographic relations, from which five were long reported. This suggests a liaison with the Eddington's matrix $16\times 16$}.
 \label{fig:figure_label}
 \end{figure*}
 
@@ -794,6 +794,22 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
 \section{The fine-tuning with basic mathematical constants}
 \markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
