--- a/test.tex
+++ b/test.tex
@@ -163,7 +163,7 @@ In the same manner, \textit{this article prefigures the fundamental theory, but 
 
 \begin{figure*}
 \centering
-\includegraphics[width=\textwidth,height=14cm]{./figures/figure}
+\includegraphics[width=\textwidth,height=14cm]{./figures/figure.svg}
 \caption{\textit{The Topological Axis}. The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series d = 4k + 2, from k = 0 to k = 7, characteristics of the Bott sequence [19]. This is the origin of the name `Topological Axis`. 
 \textit{In the macro-physics side, with length unit the Electron Compton reduced wavelength, the Universe circumference} is tied to the bosonic critical dimension 26, while Bott reduction $\Delta$d = 8 leads firstly to  d = 18: it is the \textit{thermal photon} (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor $j$ (section 8.2); another Bott reduction leads to d = 10 (super-string dimension): it is the \textit{Hydrogen atom}, and finally to d = 2: the \textit{string}. For the number 24 of transverse dimensions, it is the \textit{Kotov length} (section 4.3), multiplied by a factor 2$\pi a$, with $a \approx 137.036$. For d $\approx \Gamma$, the Atiyah constant (section 8.2), it is the \textit{galaxy group} radius, a characteristic cosmic length ($10^{6}$ light-years, section 2.1). For k $\approx e^{2}$, $y \approx 2e$, it is the \textit{Grandcosmos} radius (section 3). 
 The Space-Time-Matter Holic dimension d = 30 (section 6) is tied to $c$ times the cosmic \textit{Supercycle} period (section 5). 
