--- a/test.tex
+++ b/test.tex
@@ -57,7 +57,7 @@ $^9$Lecturer at ENSA Paris Malaquais, France (retired). lgueroult@hotmail.com
 }\par
 \medskip
 {\small\parbox{11cm}{%
-\hfill To the memory of Sir Michael Atiyah\\
+
 The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Connection with the Eddington's constant 137 and the Atiyah's one. The Holic Principle and Eddington's Theory must unlock Particle Physics, with massive gluons and composite d quark. Based on the imperfect cosmological principle, the standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
@@ -1059,8 +1059,7 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}. It i
 \end{itemize}
 
 \section*{Acknowledgements}
-The authors salute the memory of Sir Michael Atiyah. His comments were precious, and his constant is decisive. We also thank helpful discussions with Thiebault Moulin, Cristian Marchal, Anatole Khelif and Joel Sternheimer whom scale constant we called $j$ in his honor. 
-we called $j$ in his honor.
+The authors thank helpful discussions with Thiebault Moulin, Sir Michael Atiyah, Christian Marchal and Anatole Khelif. 
 %
 \begin{flushright}\footnotesize
 Submitted on April 1st, 2019 / Accepted on April 6th, 2019
@@ -1104,6 +1103,8 @@ Kotov V.A. ``Fast spinning of planets''. Earth Moon Planets 122(1), 43--52
 syst\`eme solaire''. Compt. Rend. Acad. Sci. Paris. 222, 220--221 (1946).
 Kotov V.A. ``Motion of the fast exoplanets''. Astrophys. Space Sci. 363(3), 1-5
 (2018); DOI: 10.1007/s10509-018-3278-1.
+
+\bibitem{As} Aschbacher M. ``Sporadic Groups``, Ney-York. C.U.P. (1994).
 
 \bibitem{Marchal} Marchal C. ``Physics with photons of non-zero rest mass``, Proceedings of 28th Intern. Workshop,p. 152-166. Protvino, Russia (2005).
 
@@ -1161,9 +1162,9 @@ treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 \bibitem{Conway} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
 Math. Soc. 11(3) 308--339 (1979)
 
-%\bibitem{Janko} Janko Zvonimir, ``Some new simple groups of finite order``. I, Symposia Mathematica (INDAM, Rome, 1967/68) %Academic Press, London, 1969, pp. 25–64. MR 0244371
+%\bibitem{Janko} Janko Zvonimir, ``Some new simple groups of finite order``. I, Symposia Mathematica (INDAM, %Rome, 1967/68) %Academic Press, London, 1969, pp. 25–64. MR 0244371
 
-\bibitem{Janko} Janko Z., « A new finite simple group with abelian Sylow subgroups and its characterization », Journal of Algebra, vol. 32, 1966, p. 147-186
+%\bibitem{Janko} Janko Z., « A new finite simple group with abelian Sylow subgroups and its characterization », %Journal of Algebra, vol. 32, 1966, p. 147-186
 
 \bibitem{Moulin} Moulin T. Symposium 4, 11eme congres International de Cybernetique. Namur, Aout 1986: Utilisation en physique et biologie de referentiels spatio-structuro-temporels engendres par des Relateurs Arithmetiques. 
 %Moulin T. et Groupe Systema. Relateurs Arithmetiques (2 tomes): Ebauche du formalisme: avant la premiere %jonction avec les structures de Lie. ENSTA.(1993). See also: Moulin T. Vallet C. Nature cognition and System 1. %294. Carvallo M. (Ed). Kluwer Acad. Publisher. (1988)
