--- a/test.tex
+++ b/test.tex
@@ -58,7 +58,8 @@ $^9$Lecturer at ENSA Paris Malaquais, France (retired). lgueroult@hotmail.com
 \medskip
 {\small\parbox{11cm}{%
 
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Connection with the Eddington's constant 137 and the Atiyah's one. The Holic Principle and Eddington's Theory must unlock Particle Physics, with massive gluons and composite d quark. Based on the imperfect cosmological principle, the standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
+
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series d = 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ trans-Plankian quantified time. This confirms the matter-antimatter Oscillatory Bounce and resolves at last the vacuum energy dilemma. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, showing Four Force Connection with the Eddington's constant 137 and the Atiyah's one. The Holic Principle and Eddington's Theory must unlock Particle Physics, with massive gluons and composite d quark. Based on the imperfect cosmological principle, the standard evolutionary cosmology will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
@@ -109,13 +110,15 @@ Contents
     
 8. The role of intermediary mathematical constants
 
-~~~    8.1. The Eddington's constant 137
+~~~    8.1. The electrical constant $a$
+
+~~~    8.2. The Eddington's constant 137
    
-~~~    8.2. The Atiyah and Sternheimer constants
+~~~    8.3. The Atiyah and Sternheimer constants
    
-~~~    8.3. The ubiquity of $a^a$
+~~~    8.4. The ubiquity of $a^a$
    
-~~~    8.4. The intervention of sporadic groups
+~~~    8.5. The intervention of sporadic groups
    
  9. The fine-tuning with basic mathematical constants
  
@@ -126,9 +129,7 @@ Contents
 ~~~    9.3. The Archimedes constant $\pi$ as a calculation base
    
 ~~~    9.4. The Four Forces Connection in ppb fine-tuning
-   
-~~~    9.5. The heavy leptons fine-tuning
-   
+  
  10. Discussion
  
  11. Conclusions: Cosmic Simplicity at work
