--- a/test.tex
+++ b/test.tex
@@ -797,22 +797,32 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+\begin{table}
+ \caption{Sample table title}
+  \centering
+  \begin{tabular}{lll}
+    \toprule
+    \multicolumn{2}{c}{Part}                   \\
+    \cmidrule(r){1-2}
+    Element Name     & k     & d=$2+4k$) & lnln(f(n))\\
+    \midrule
+    string & 0  & 2 & 0.347     \\
+    gluon  & 1 & 6 & 0.347      \\
+    mean pion & 2  & 10 & 1.722  \\
+    H Atom Diameter & 2  & 10 & 1.725  \\
+    Half Mean Weak Boson & 3  & 14 & 2.428  \\
+    Higgs Boson & $\pi$  & 14.56 & 2.519  \\
+    Thermal Photon & 4  & 18 & 3.120  \\
+    Boson GUT pion & 5  & 22 & 3.794  \\
+    Hubble Radius & 6  & 26 & 4.506  \\
+    Graviton & 6  & 26 & 4.506  \\
+    SuperCycle & 7  & 30 & 5.199  \\
+    Topon & $2e^e$  & 30.31 & 5.253  \\
+    GrandCosmos & $e^2$  & 31.55 & 5.432  \\
+    \bottomrule
+  \end{tabular}
+  \label{tab:table}
+\end{table}
 
 
 
