--- a/test.tex
+++ b/test.tex
@@ -800,7 +800,7 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
 \begin{table}
  \caption{Sample table title}
   \centering
-  \begin{tabular}{lll}
+  \begin{tabular}{llll}
     \toprule
     \multicolumn{2}{c}{Part}                   \\
     \cmidrule(r){1-2}
