--- a/test.tex
+++ b/test.tex
@@ -15,6 +15,7 @@
 \usepackage{cite}
 
 \usepackage[varg]{txfonts}
+\usepackage{booktabs}       % professional-quality tables
 
 \oddsidemargin=-0.20in
 \evensidemargin=-0.20in
@@ -802,8 +803,8 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
   \centering
   \begin{tabular}{llll}
     \toprule
-    \multicolumn{2}{c}{Part}                   \\
-    \cmidrule(r){1-2}
+    \multicolumn{3}{c}{Part}                   \\
+    \cmidrule(r){1-3}
     Element Name     & k     & d=$2+4k$) & lnln(f(n))\\
     \midrule
     string & 0  & 2 & 0.347     \\
