--- a/test.tex
+++ b/test.tex
@@ -1175,7 +1175,9 @@ Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 \bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/.
 
 \bibitem{Conway} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
-Math. Soc. 11(3) 308--339 (1979)
+Math. Soc. 11(3) 308--339 (1979).
+
+\bibitem{Titts} Titts J. ``Algebraic and abstract simple groups``. Annals of Mathematics, second series, vol 80, 313-329 (1964).
 
 %\bibitem{Janko} Janko Zvonimir, ``Some new simple groups of finite order``. I, Symposia Mathematica (INDAM, %Rome, 1967/68) %Academic Press, London, 1969, pp. 25–64. MR 0244371
 
