--- a/test.tex
+++ b/test.tex
@@ -799,27 +799,27 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
 
 
 \begin{table}
- \caption{Sample table title}
+ \caption{Data Sample table}
   \centering
-  \begin{tabular}{llll}
+  \begin{tabular}{lllll}
     \toprule
-    \multicolumn{3}{c}{Part}                   \\
-    \cmidrule(r){1-3}
-    Element Name     & k     & d=$2+4k$) & lnln(f(n))\\
+    \multicolumn{5}{c}{Part}                   \\
+    \cmidrule(r){1-5}
+    Element Name     & k     & d=$2+4k$) & $lnln(f(d))$ & Measured & Theoritical Measure $f(d)$ \\
     \midrule
-    string & 0  & 2 & 0.347     \\
-    gluon  & 1 & 6 & 0.347      \\
-    mean pion & 2  & 10 & 1.722  \\
-    H Atom Diameter & 2  & 10 & 1.725  \\
-    Half Mean Weak Boson & 3  & 14 & 2.428  \\
-    Higgs Boson & $\pi$  & 14.56 & 2.519  \\
-    Thermal Photon & 4  & 18 & 3.120  \\
-    Boson GUT pion & 5  & 22 & 3.794  \\
-    Hubble Radius & 6  & 26 & 4.506  \\
-    Graviton & 6  & 26 & 4.506  \\
-    SuperCycle & 7  & 30 & 5.199  \\
-    Topon & $2e^e$  & 30.31 & 5.253  \\
-    GrandCosmos & $e^2$  & 31.55 & 5.432  \\
+    string & 0  & 2 & 0.347 & $f(n) = 4.113 = 10^(0.6142)$ & NYD \\
+    gluon  & 1 & 6 & 0.347 & $f(n) = 16.92 = 10^(1.228)$ & NYD \\   
+    mean pion & 2  & 10 & 1.722 & $f(n) = 286.25 = 10^(2.457)$ & NYD \\ 
+    H Atom Diameter & 2  & 10 & 1.725 & ? & NYD \\
+    Half Mean Weak Boson & 3  & 14 & 2.428 & $f(n) = 81937= 10^(4.913)$ & 10^(4.913)$  \\
+    Higgs Boson$125.5G_eV$ & $\pi$  & 14.56 & 2.519 & 2.524 & $10^(5.420)$  \\
+    Thermal Photon & 4  & 18 & 3.120 & $f(n) = 6.714  10^9 = 10^(9.827)$ & NYD \\
+    Boson GUT pion & 5  & 22 & 3.794 & $f(n)  = 10^(19.65)$ & NYD  \\
+    Hubble perimeter & 6  & 26 & 4.506 & $f(n) = 10^(39.31)$ & NYD  \\
+    Graviton & 6  & 26 & 4.506 & $3.72 10(-67) kg$ & $10^(39.31)$  \\
+    SuperCycle & 7  & 30 & 5.199 & $5.483 10^57 s$ & $10^(78.62)$ \\
+    Topon & $2e^e$  & 30.31 & 5.253 & 5.252 & $10^(82.93)$ \\
+    GrandCosmos & $e^2$  & 31.55 & 5.432 & 5.468 & $10^(102.9)$  \\
     \bottomrule
   \end{tabular}
   \label{tab:table}
