--- a/test.tex
+++ b/test.tex
@@ -801,10 +801,10 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
 \begin{table}
  \caption{Data Sample table}
   \centering
-  \begin{tabular}{lllll}
+  \begin{tabular}{llllll}
     \toprule
-    \multicolumn{5}{c}{Part}                   \\
-    \cmidrule(r){1-5}
+    \multicolumn{6}{c}{Part}                   \\
+    \cmidrule(r){1-6}
     Element Name     & k     & d=$2+4k$) & $lnln(f(d))$ & Measured & Theoritical Measure $f(d)$ \\
     \midrule
     string & 0  & 2 & 0.347 & $f(n) = 4.113 = 10^(0.6142)$ & NYD \\
