--- a/test.tex
+++ b/test.tex
@@ -811,7 +811,7 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
     gluon  & 1 & 6 & 0.347 & $f(n) = 16.92 = 10^(1.228)$ & NYD \\   
     mean pion & 2  & 10 & 1.722 & $f(n) = 286.25 = 10^(2.457)$ & NYD \\ 
     H Atom Diameter & 2  & 10 & 1.725 & ? & NYD \\
-    Half Mean Weak Boson & 3  & 14 & 2.428 & $f(n) = 81937= 10^(4.913)$ & 10^(4.913)$  \\
+    Half Mean Weak Boson & 3  & 14 & 2.428 & $lnln(83782) = 2.428$  & 81937=$10^(4.913)$  \\
     Higgs Boson$125.5G_eV$ & $\pi$  & 14.56 & 2.519 & 2.524 & $10^(5.420)$  \\
     Thermal Photon & 4  & 18 & 3.120 & $f(n) = 6.714  10^9 = 10^(9.827)$ & NYD \\
     Boson GUT pion & 5  & 22 & 3.794 & $f(n)  = 10^(19.65)$ & NYD  \\
