--- a/test.tex
+++ b/test.tex
@@ -799,13 +799,13 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
 
 
 \begin{table}
- \caption{Data Sample table}
+ \caption{Data table}
   \centering
   \begin{tabular}{llllll}
     \toprule
     \multicolumn{6}{c}{Part}                   \\
     \cmidrule(r){1-6}
-    Element Name     & k     & d=$2+4k$) & $lnln(f(d))$ & Measured & Theoritical Measure $f(d)$ \\
+    Element Name     & k     & d=$2+4k$) & $lnln(f(d))$ & Meas. & $f(d)$ \\
     \midrule
     string & 0  & 2 & 0.347 & $f(n) = 4.113 = 10^(0.6142)$ & NYD \\
     gluon  & 1 & 6 & 0.347 & $f(n) = 16.92 = 10^(1.228)$ & NYD \\   
