--- a/test.tex
+++ b/test.tex
@@ -111,7 +111,7 @@ Contents
     
 8. The role of intermediary mathematical constants
 
-~~~    8.1. The electrical constant $a$
+~~~    8.1. The Electrical Constant $a$
 
 ~~~    8.2. The Eddington's constant 137
    
