--- a/test.tex
+++ b/test.tex
@@ -798,7 +798,7 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 
-\begin{table}
+\begin{table*}
  \caption{Data table}
   \centering
   \begin{tabular}{llllll}
@@ -823,7 +823,7 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
     \bottomrule
   \end{tabular}
   \label{tab:table}
-\end{table}
+\end{table*}
 
 
 
