--- a/test.tex
+++ b/test.tex
@@ -613,6 +613,21 @@ Thus, precising the relation $a_w/WZ \approx \sqrt{a}$ known (0.1 \%) in Particl
 137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
 \end{equation}   
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The role of Intermediary Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
@@ -818,7 +833,7 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
     Hubble perimeter & 6  & 26 & 4.506 & $10^{39.31}$ & NYD  \\
     Graviton & 6  & 26 & 4.506 & $3.72\cdot 10^{-67} kg$ & $10^{39.31}$  \\
     SuperCycle & 7  & 30 & 5.199 & $5.483\cdot 10^{57} s$ & $10^{78.62}$ \\
-    Topon & $2e^e$  & 30.31 & 5.253 & 5.252 & $10^{82.93}$ \\
+    Topon & $7.07$  & 2e^e & 5.253 & 5.252 & $10^{82.93}$ \\
     GrandCosmos & $e^2$  & 31.55 & 5.432 & 5.468 & $10^{102.9}$  \\
     \bottomrule
   \end{tabular}
