--- a/test.tex
+++ b/test.tex
@@ -833,7 +833,7 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
     Hubble perimeter & 6  & 26 & 4.506 & $10^{39.31}$ & NYD  \\
     Graviton & 6  & 26 & 4.506 & $3.72\cdot 10^{-67} kg$ & $10^{39.31}$  \\
     SuperCycle & 7  & 30 & 5.199 & $5.483\cdot 10^{57} s$ & $10^{78.62}$ \\
-    Topon & 7.07  & 2e^e & 5.253 & 5.252 & $10^{82.93}$ \\
+    Topon & 7.07  & 2$e^e$ & 5.253 & 5.252 & $10^{82.93}$ \\
     GrandCosmos & $e^2$  & 31.55 & 5.432 & 5.468 & $10^{102.9}$  \\
     \bottomrule
   \end{tabular}
