--- a/test.tex
+++ b/test.tex
@@ -822,13 +822,13 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
     \toprule
     \multicolumn{6}{c}{Part}                   \\
     \cmidrule(r){1-6}
-    Element Name     & k     & d=$2+4k$) & $lnln(f(d))$ & Meas. & $f(d)$ \\
+   Element Name     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions \\
     \midrule
-    string & 0  & 2 & 0.347 & $4.113 = 10^{0.6142}$ & NYD \\
-    gluon  & 1 & 6 & 0.347 & $f16.92 = 10^{1.228}$ & NYD \\   
-    mean pion & 2  & 10 & 1.722 & 286.25 = $10^{2.457}$ & NYD \\ 
-    H Atom Diameter & 2  & 10 & 1.725 & ? & NYD \\
-    Half Mean Weak Boson & 3  & 14 & 2.428 & $lnln(83782) = 2.428$  & 81937=$10^{4.913}$  \\
+    string & 0  & 2 & 0.347 &  & $ m_{string} \approx 2.1~ MeV ~? \\
+    gluon  & 1 & 6 & 1.040 & $ & $m_{gluon} \approx 8.6~ MeV ~? \\  
+    mean pion & 2  & 10 & 1.733 & lnln(268.60)\approx 1.722 &  \\ 
+    H Atom Diameter & 2  & 10 & 1.733 & lnln(274.22) \approx 1.725  &  \\
+    Half Mean Weak Boson & 3  & 14 & 2.426 & lnln(8.378~\cdot~10^4)\approx 2.428  &   \\
     Higgs Boson$125.5G_eV$ & $\pi$  & 14.56 & 2.519 & 2.524 & $10^{5.420}$  \\
     Thermal Photon & 4  & 18 & 3.120 & $6.714 \cdot 10^9 = 10^{9.827}$ & NYD \\
     Boson GUT pion & 5  & 22 & 3.794 & $10^{19.65}$ & NYD  \\
@@ -841,6 +841,10 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
   \end{tabular}
   \label{tab:table}
 \end{table*}
+
+
+
+
 
 
 
