--- a/test.tex
+++ b/test.tex
@@ -825,7 +825,7 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
    Element Name     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions \\
     \midrule
     string & 0  & 2 & 0.347 &  & $ m_{string} \approx 2.1~ MeV ~? \\
-    gluon  & 1 & 6 & 1.040 & $ & $m_{gluon} \approx 8.6~ MeV ~? \\  
+    gluon  & 1 & 6 & 1.040 &  & $m_{gluon} \approx 8.6~ MeV ~? \\  
     mean pion & 2  & 10 & 1.733 & lnln(268.60)\approx 1.722 &  \\ 
     H Atom Diameter & 2  & 10 & 1.733 & lnln(274.22) \approx 1.725  &  \\
     Half Mean Weak Boson & 3  & 14 & 2.426 & lnln(8.378~\cdot~10^4)\approx 2.428  &   \\
