--- a/test.tex
+++ b/test.tex
@@ -826,8 +826,8 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
     \midrule
     string & 0  & 2 & 0.347 &  & $ m_{string} \approx$ 2.1~ MeV ~? \\
     gluon  & 1 & 6 & 1.040 &  & $m_{gluon} \approx$ 8.6~ MeV ~? \\  
-    mean pion & 2  & 10 & 1.733 & lnln(268.60)\approx 1.722 &  \\ 
-    H Atom Diameter & 2  & 10 & 1.733 & lnln(274.22) \approx 1.725  &  \\
+    mean pion & 2  & 10 & 1.733 & lnln(268.60)$\approx$ 1.722 &  \\ 
+    H Atom Diameter & 2  & 10 & 1.733 & lnln(274.22) $\approx$ 1.725  &  \\
     Half Mean Weak Boson & 3  & 14 & 2.426 & lnln(8.378~$\cdot~10^4)\approx$ 2.428  &   \\
     Higgs Boson$125.5G_eV$ & $\pi$  & 14.56 & 2.519 & 2.524 & $10^{5.420}$  \\
     Thermal Photon & 4  & 18 & 3.120 & $6.714 \cdot 10^9 = 10^{9.827}$ & NYD \\
