--- a/test.tex
+++ b/test.tex
@@ -834,7 +834,7 @@ From Eqs. (48), (51) and (53), by taking the $137^{th}$ root, one obtains, to 0.
     Boson GUT pion & 5  & 22 & 3.812 & & $m_{GUT} \approx$ 2.30 $~\cdot~ 10^{16}$~$ GeV $~$\\
     %Photon & 5.5  & 24 & 4.159 & & $m_{ph} = \hbar/cl_K \approx 1.2\cdot~10^{-55}$kg? \\
     %Kotov perimeter & 5.5  & 24 & 4.159 & lnln($2\pi l_K /r_e)\approx$ $~$ 4.159 \\
-    Hubble perimeter & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(2\pi R_{Hubble} /\lambdabar_e)\approx$ 4.5059  \\
+    %Hubble perimeter & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(2\pi R_{Hubble} /\lambdabar_e)\approx$ 4.5059  \\
     Graviton & 6  & 26 & 4.505 &  & $ m_{gr}\approx$ 3.7$\cdot 10^{-67} kg~?$  \\
     SuperCycle & 7  & 30 & 5.199 & & lnln$(T/t_e) \approx$ $~$5.199 \\
     Topon &   & 2$e^e$ & 5.253 &  & lnln$(\lambdabar_e/\lambdabar_M) \approx$ 5.523 \\
